# squad-workshop

./: .dockerignore  .gitignore  Dockerfile  README.md  azure.yaml  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
.squad/: .first-run  decisions.md  ralph-circuit-breaker.json  routing.md  team.md
.squad/agents/Rai/: history.md
.squad/agents/fact-checker/: history.md
.squad/agents/morpheus/: charter.md  history.md
.squad/agents/neo/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/scribe/: history.md
.squad/agents/switch/: charter.md  history.md
.squad/agents/tank/: charter.md  history.md
.squad/agents/trinity/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/decisions/inbox/: copilot-decouple-legacy-blob-role-cleanup.md  tank-postprovision-az-cli-portability.md  tank-private-app-azd-target.md  tank-private-app-name.md
.squad/identity/: now.md  wisdom.md
docs/design/: application-development.md  azure-deployment.md  generative-media.md  test-strategy.md
infra/: foundry.bicep  main.bicep  main.bicepparam  web.bicep
infra/scripts/: retire_legacy_storage_blob_role.py
src/fantasy_cards/: __init__.py  __main__.py  adapters.py  application.py  cli.py  config.py  domain.py  ports.py  telemetry.py  web.py
src/fantasy_cards/static/: app.css  app.js
src/fantasy_cards/templates/: index.html
tests/: test_blob_artifact_store.py  test_cli.py  test_config.py  test_deployment_contract.py  test_foundry_adapter.py  test_generation_service.py  test_retire_legacy_storage_blob_role.py  test_telemetry_contract.py  test_web_acceptance.py  test_web_static_contract.py
