[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-card-generator"
version = "0.1.0"
description = "Provider-neutral fantasy card generation application"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
fantasy-card = "fantasy_cards.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
